--- a/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form-linzy-dlia-ochkov.html
+++ b/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form-linzy-dlia-ochkov.html
@@ -19,7 +19,7 @@
             <h6 class="no-margin">
                 OS - левый глаз
             </h6>
-            <fieldset id='OS'>
+            <fieldset id='OS' class="mgb-10">
 
                 <div class="row">
                     <div class="form-group col-sm-3 col-xs-6">
@@ -88,7 +88,7 @@
             <label class="inline-checkbox">
                 OD = OS <input type="checkbox" id='OD_OS'/>
             </label>
-            <fieldset id="OD">
+            <fieldset id="OD" class="mgb-10">
                 <div class="row">
                     <div class="form-group col-sm-3 col-xs-6">
                         <!-- Input Group -->
