--- a/homeoptik/templates/oscar/layout_2_col.html
+++ b/homeoptik/templates/oscar/layout_2_col.html
@@ -31,6 +31,11 @@ main content area to split it into a sidebar and a content block
         <!-- Container -->
         <div class="container cont-pad-x-15">
             {% block breadcrumbs %}{% endblock %}
+            <ul class="page-links pull-right hlinks hlinks-icons color-icons-borders color-icons-bg-hovered">
+                <li><a href="https://vk.com/homeoptik/"><i class="icon fa fa-vk"></i></a></li>
+                <li><a href="https://instagram.com/homeoptik/"><i class="icon fa fa-instagram"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCUB-CdLxuCyfqxJKYFQ11CQ"><i class="icon fa fa-youtube"></i></a></li>
+            </ul>
         </div>
         <!-- /Container -->
     </section>
