--- a/homeoptik/templates/oscar/partials/mini_basket.html
+++ b/homeoptik/templates/oscar/partials/mini_basket.html
@@ -43,10 +43,10 @@
                             <section>
                                 <div class="row grid-10">
                                     <div class="col-md-6">
-                                        <a class="btn btn-base btn-block margin-y-5" href="{% url 'basket:summary' %}">{% trans "view basket" %}</a>
+                                        <a class="btn btn-base btn-block margin-y-5" href="{% url 'basket:summary' %}">В КОРЗИНУ</a>
                                     </div>
                                     <div class="col-md-6">
-                                        <a class="btn btn-primary btn-block margin-y-5" href="{% url 'checkout:index' %}">{% trans "checkout" %}</a>
+                                        <a class="btn btn-primary btn-block margin-y-5" href="{% url 'checkout:index' %}">ОФОРМИТЬ</a>
                                     </div>
                                 </div>
                             </section>
