--- a/homeoptik/templates/oscar/search/partials/facet.html
+++ b/homeoptik/templates/oscar/search/partials/facet.html
@@ -1,17 +1,14 @@
 {% load i18n %}
-{#{% load homeoptik_tags %}#}
 
-{#{% has_choice as has_choice %}#}
-{#{% if has_choice %}#}
 <!-- Panel -->
 <li class="dropdown">
-    <a href="#collapse{{ number }}" data-toggle="collapse">
+    <a href="#collapse{{ number }}" data-toggle="collapse" aria-expanded="{% if expanded %}true{% else %}false{% endif %}">
         <span class="text">{{ name }}</span>
         <span class="toggler ti ti-plus"></span>
     </a>
 
     <!-- Collapse -->
-    <div id="collapse{{ number }}" class="collapse">
+    <div id="collapse{{ number }}" class="collapse {% if expanded %}in{% endif %}">
         <div class="panel-body no-pad-t no-pad-b">
             {% for item in items %}
                 <div class="checkbox">
@@ -43,54 +40,3 @@
     </div>
     <!-- /Collapse -->
 </li>
-
-{% comment %}
-<div class="panel panel-default no-margin {% if number %}no-border-t{% endif %}">
-    <!-- Heading -->
-{#    <div class="panel-heading no-bg-color">#}
-        <h4 class="panel-title">
-            <a class="panel-heading no-bg-color" data-toggle="collapse"  href="#collapse{{ number }}" aria-expanded="true">
-                {{ name }}
-            </a>
-            <i class="font-size-sm toggler ti ti-plus"></i>
-        </h4>
-{#    </div>#}
-    <!-- /Heading -->
-
-    <!-- Collapse -->
-    <div id="collapse{{ number }}" class="panel-collapse collapse in">
-        <div class="panel-body no-pad-t no-pad-b">
-            {% for item in items %}
-                <div class="checkbox">
-                    {#        {% if not item.disabled  %}#}
-                    <label>
-                        {% if item.selected %}
-                            <input class="facet_checkbox" type="checkbox" name="{{ item.name }}" checked />
-                            <input class="facet_url" type="hidden" name="url_for_{{ item.name }}" value="{{ item.deselect_url }}" />
-                            <strong>{{ item.name }}</strong>
-                        {% else %}
-                            {% if item.disabled %}
-                                <input type="checkbox" name="{{ item.name }}" disabled />
-                                {{ item.name }}
-                            {% else %}
-                                <input class="facet_checkbox" type="checkbox" name="{{ item.name }}" />
-                                <input class="facet_url" type="hidden" name="url_for_{{ item.name }}" value="{{ item.select_url }}" />
-                                <a href="{{ item.select_url }}">{{ item.name }}</a>
-                            {% endif %}
-                        {% endif %}
-                        {% if item.show_count %}
-                            ({{ item.count }})
-                        {% endif %}
-                    </label>
-
-                    {#        {% endif %}#}
-                </div>
-            {% endfor %}
-
-        </div>
-    </div>
-    <!-- /Collapse -->
-
-</div>
-
-{% endcomment %}
