--- a/homeoptik/templates/oscar/basket/partials/basket_content.html
+++ b/homeoptik/templates/oscar/basket/partials/basket_content.html
@@ -65,13 +65,13 @@
                                         <div class="pull-left no-float-xs">
                                             <a href="{{ product.get_absolute_url }}" class="title">{{ line.description }}</a>
                                             <!-- hlinks -->
-                                            <div class="rating hlinks hlinks-rating {{ product.rating|as_stars }}">
-                                                <li><a><i class="icon fa fa-star"></i></a></li>
-                                                <li><a><i class="icon fa fa-star"></i></a></li>
-                                                <li><a><i class="icon fa fa-star"></i></a></li>
-                                                <li><a><i class="icon fa fa-star"></i></a></li>
-                                                <li><a><i class="icon fa fa-star"></i></a></li>
-                                            </div>
+{#                                            <div class="rating hlinks hlinks-rating {{ product.rating|as_stars }}">#}
+{#                                                <li><a><i class="icon fa fa-star"></i></a></li>#}
+{#                                                <li><a><i class="icon fa fa-star"></i></a></li>#}
+{#                                                <li><a><i class="icon fa fa-star"></i></a></li>#}
+{#                                                <li><a><i class="icon fa fa-star"></i></a></li>#}
+{#                                                <li><a><i class="icon fa fa-star"></i></a></li>#}
+{#                                            </div>#}
                                             <!-- /hlinks -->
                                             {% if product.upc %}
                                                 <span>{% trans "UPC" %}:{{ product.upc }}</span>
