--- a/homeoptik/templates/oscar/customer/login_registration.html
+++ b/homeoptik/templates/oscar/customer/login_registration.html
@@ -20,21 +20,29 @@
 
     <div class="row">
         <div class="col-sm-6 login_form">
-            <form id="login_form" action="{{ request.get_full_path }}" method="post" class="well" >
-                <h2>{% trans 'Log In' %}</h2>
-                {% csrf_token %}
-                {% include "partials/form_fields.html" with form=login_form %}
-                <p><a href="{% url 'password-reset' %}">{% trans "I've forgotten my password" %}</a></p>
-                <button name="login_submit" type="submit" value="Log In" class="btn btn-lg btn-primary" data-loading-text="{% trans "Logging in..." %}">{% trans 'Log In' %}</button>
-            </form>
+            <div class="form-panel">
+                <header>Войти</header>
+                <fieldset>
+                    <form id="login_form" action="{{ request.get_full_path }}" method="post" >
+                        {% csrf_token %}
+                        {% include "partials/form_fields.html" with form=login_form %}
+                        <p><a href="{% url 'password-reset' %}">{% trans "I've forgotten my password" %}</a></p>
+                        <button name="login_submit" type="submit" value="Log In" class="btn btn-lg btn-primary" data-loading-text="{% trans "Logging in..." %}">{% trans 'Log In' %}</button>
+                    </form>
+                </fieldset>
+            </div>
         </div>
         <div class="col-sm-6 register_form">
-            <form id="register_form" action="{{ request.get_full_path }}" method="post" class="well">
-                <h2>{% trans 'Register' %}</h2>
-                {% csrf_token %}
-                {% include "partials/form_fields.html" with form=registration_form %}
-                <button name="registration_submit" type="submit" value="Register" class="btn btn-lg btn-primary" data-loading-text="{% trans 'Registering...' %}">{% trans 'Register' %}</button>
-            </form>
+            <div class="form-panel">
+                <header>Зарегистрироваться</header>
+                <fieldset>
+                    <form id="register_form" action="{{ request.get_full_path }}" method="post">
+                        {% csrf_token %}
+                        {% include "partials/form_fields.html" with form=registration_form %}
+                        <button name="registration_submit" type="submit" value="Register" class="btn btn-lg btn-primary" data-loading-text="{% trans 'Registering...' %}">{% trans 'Register' %}</button>
+                    </form>
+                </fieldset>
+            </div>
         </div>
     </div>
 
