--- a/homeoptik/templates/oscar/partials/footer.html
+++ b/homeoptik/templates/oscar/partials/footer.html
@@ -1,109 +1,162 @@
 {% load i18n %}
 {% load staticfiles %}
+{% load flatpages %}
+
+{% get_flatpages '/help/' as flatpages %}
+
+
+<div class="newsletter-block boxed-section overlay-dark-m cover-2-bg">
+
+    <!-- Container -->
+    <div class="container">
+        <form>
+            <!-- Row -->
+            <div class="row grid-10">
+                <!-- Col -->
+                <div class="col-sm-3 col-md-4">
+                    <span class="case-c">
+                        ПОЛУЧИТЕ
+                        <span style="display: inline-block; color:#E7214C; font-weight: bold;font-size: large;">500</span>
+                        РУБЛЕЙ ЗА ПОДПИСКУ!
+                    </span>
+                </div>
+                <!-- Col -->
+
+                <!-- Col -->
+                <div class="col-sm-6 col-md-6">
+                    <input class="form-control" placeholder="Введите ваш Email" type="text">
+                </div>
+                <!-- Col -->
+
+                <!-- Col -->
+                <div class="col-sm-3 col-md-2">
+                    <button class="btn btn-block btn-color yellow-bg"><i class="icon-left fa fa-envelope"></i>подписаться</button>
+                </div>
+                <!-- /Col -->
+
+            </div>
+            <!-- /Row -->
+        </form>
+    </div>
+    <!-- /Container -->
+
+</div>
 
 <!-- Footer
 =================================================== -->
 <footer class="footer-block">
     {% block footer %}
-    <!-- Container -->
-    <div class="container cont-top clearfix">
-
-        <!-- Row -->
-        <div class="row">
-
-            <!-- Brand -->
-            <div class="col-md-3 brand-col brand-center">
-                <div class="vcenter">
-                    <a class="vcenter-this" href="{{ homepage_url }}">
-                        <img src="{% static "images/logo-footer.png" %}" alt="">
-                    </a>
-                </div>
-            </div>
-            <!-- /Brand -->
-
-            <!-- Links -->
-            <div class="col-md-9 links-col">
-
-                <!-- Row -->
-                <div class="row-fluid">
-
-                    <!-- Col -->
-                    <div class="col-xs-6 col-sm-6 col-md-6">
-                        <h5>О нас</h5>
-                            <p>alksdmaldm</p>
-                        <!-- hlinks -->
-                        <ul class="hlinks hlinks-icons color-icons-borders color-icons-bg color-icons-hovered">
-                            <li><a href="https://vk.com/homeoptik/"><i class="icon fa fa-vk"></i></a></li>
-                            <li><a href="https://instagram.com/homeoptik/"><i class="icon fa fa-instagram"></i></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCUB-CdLxuCyfqxJKYFQ11CQ"><i class="icon fa fa-youtube"></i></a></li>
-                        </ul>
-                        <!-- /hlinks -->
-                    </div>
-                    <!-- /Col -->
-
-                    <!-- Col -->
-                    <div class="col-xs-6 col-sm-3 col-md-3">
-                        <h5>аккаунт</h5>
-                        <ul class="vlinks">
-                            <li><a href="{% url 'customer:summary' %}">Личный кабинет</a></li>
-                            <li><a href="{% url 'customer:order-list' %}">История заказов</a></li>
-{#                            <li><a href="{% url 'customer:wishlists-list' %}">Список желаний</a></li>#}
-                            <li><a href="{% url 'basket:summary' %}">Посмотреть корзину</a></li>
-
-                        </ul>
-                    </div>
-                    <!-- /Col -->
-
-                    <!-- Col -->
-                    <div class="col-xs-6 col-sm-3 col-md-3 newsletter">
-                        <h5>способы оплаты</h5>
-                        <ul class="grid-list cols-3 cell-pad-5">
-                            <li><img src="{% static "images/cards/amazon.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/paypal.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/visa.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/mastercard.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/maestro.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/obopay.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/discover.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/cirrus.png" %}" alt=""></li>
-                            <li><img src="{% static "images/cards/google.png" %}" alt=""></li>
-                        </ul>
-                    </div>
-                    <!-- /Col -->
-
-                </div>
-                <!-- /Row -->
-
-            </div>
-            <!-- /Links -->
-
-        </div>
-        <!-- /Row -->
-
-    </div>
-    <!-- /Container -->
-
-    <!-- Bottom -->
-    <div class="footer-bottom invert-colors bcolor-bg">
-
         <!-- Container -->
-        <div class="container">
+        <div class="container cont-top clearfix">
 
-            <span class="copy-text">© 2015 Хоум Оптика.</span>
-            <!-- hlinks -->
-            {#            <ul class="hlinks pull-right">#}
-            {#                <li><a href="#">About</a></li>#}
-            {#                <li><a href="#">Login</a></li>#}
-            {#                <li><a href="#">Sign Up</a></li>#}
-            {#                <li><a href="#">Support</a></li>#}
-            {#            </ul>#}
-            <!-- /hlinks -->
+            <!-- Row -->
+            <div class="row">
+
+                <!-- Brand -->
+                <div class="col-md-3 brand-col brand-center">
+                    <div class="vcenter">
+                        <a class="vcenter-this" href="{{ homepage_url }}">
+                            <img src="{% static "images/logo-footer.png" %}" alt="">
+                        </a>
+                    </div>
+                </div>
+                <!-- /Brand -->
+
+                <!-- Links -->
+                <div class="col-md-9 links-col">
+
+                    <!-- Row -->
+                    <div class="row-fluid">
+
+                        <!-- Col -->
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <h5>О нас</h5>
+                            <p>alksdmaldm</p>
+                            <!-- hlinks -->
+                            <ul class="hlinks hlinks-icons color-icons-borders color-icons-bg color-icons-hovered">
+                                <li><a href="https://vk.com/homeoptik/"><i class="icon fa fa-vk"></i></a></li>
+                                <li><a href="https://instagram.com/homeoptik/"><i class="icon fa fa-instagram"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCUB-CdLxuCyfqxJKYFQ11CQ"><i class="icon fa fa-youtube"></i></a></li>
+                            </ul>
+                            <!-- /hlinks -->
+                        </div>
+                        <!-- /Col -->
+
+                        <!-- Col -->
+                        <div class="col-xs-6 col-sm-3 col-md-3">
+                            <h5>помощь</h5>
+                            <ul class="vlinks">
+                                {% for page in flatpages %}
+                                    <li><a href="{{ page.url }}">{{ page.title|capfirst }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <!-- /Col -->
+
+                        <!-- Col -->
+                        <div class="col-xs-6 col-sm-3 col-md-3 newsletter">
+                            <h5>способы оплаты</h5>
+                            <ul class="grid-list cols-3 cell-pad-5">
+                                <li><img src="{% static "images/cards/amazon.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/paypal.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/visa.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/mastercard.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/maestro.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/obopay.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/discover.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/cirrus.png" %}" alt=""></li>
+                                <li><img src="{% static "images/cards/google.png" %}" alt=""></li>
+                            </ul>
+                        </div>
+                        <!-- /Col -->
+
+                    </div>
+                    <!-- /Row -->
+
+                </div>
+                <!-- /Links -->
+
+            </div>
+            <!-- /Row -->
 
         </div>
         <!-- /Container -->
 
-    </div>
-    <!-- /Bottom -->
+        <!-- Bottom -->
+        <div class="footer-bottom invert-colors bcolor-bg">
+
+            <!-- Container -->
+            <div class="container">
+
+                <span class="copy-text">© 2015 Хоум Оптика.</span>
+                <!-- hlinks -->
+                <ul class="hlinks pull-right">
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{% url 'customer:summary' %}">Личный кабинет</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'customer:order-list' %}">{% trans "Order history" %}</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'customer:profile-view' %}">{% trans "Profile" %}</a>
+                        </li>
+                        <li>
+                            <a  href="{% url 'customer:logout' %}">{% trans "Logout" %}</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a  href="{% url 'customer:login' %}">Войти или зарегистрироваться</a>
+                        </li>
+                    {% endif %}
+                </ul>
+                <!-- /hlinks -->
+
+            </div>
+            <!-- /Container -->
+
+        </div>
+        <!-- /Bottom -->
     {% endblock %}
 </footer>
 <!-- /Footer
