--- a/homeoptik/templates/oscar/partials/pagination.html
+++ b/homeoptik/templates/oscar/partials/pagination.html
@@ -3,21 +3,23 @@
 {% load homeoptik_tags %}
 
 {% if paginator.num_pages > 1 %}
-    <ul class="pagination">
-        <li><a {% if page_obj.has_previous %}href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}"{% endif %}>«</a></li>
-        {% nearest_pages page_obj.number paginator.num_pages as pages %}
-        {% for page_num in pages %}
-            <li>
-                <a href="?{% get_parameters page %}page={{ page_num }}"
-                   {% if page_obj.number == page_num %}class="btn disabled"{% endif %}>
-                    {% if page_obj.number == page_num %}
-                        <strong class="pcolor">{{ page_num }}</strong>
-                    {% else %}
-                        {{ page_num }}
-                    {% endif %}
-                </a>
-            </li>
-        {% endfor %}
-        <li><a {% if page_obj.has_next %}href="?{% get_parameters page %}page={{ page_obj.next_page_number }}"{% endif %}>»</a></li>
-    </ul>
+    <div class="text-center">
+        <ul class="pagination">
+            <li><a {% if page_obj.has_previous %}href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}"{% endif %}>«</a></li>
+            {% nearest_pages page_obj.number paginator.num_pages as pages %}
+            {% for page_num in pages %}
+                <li>
+                    <a href="?{% get_parameters page %}page={{ page_num }}"
+                       {% if page_obj.number == page_num %}class="btn disabled"{% endif %}>
+                        {% if page_obj.number == page_num %}
+                            <strong class="pcolor">{{ page_num }}</strong>
+                        {% else %}
+                            {{ page_num }}
+                        {% endif %}
+                    </a>
+                </li>
+            {% endfor %}
+            <li><a {% if page_obj.has_next %}href="?{% get_parameters page %}page={{ page_obj.next_page_number }}"{% endif %}>»</a></li>
+        </ul>
+    </div>
 {% endif %}
